fix: reduced the icon size for the shuffle to match the text inside the button also changed the font size to 25 to make the alignment of the icon and the button perfectly.

--- a/src/style.css
+++ b/src/style.css
@@ -830,6 +830,6 @@ a:hover{
     color: var(--primary);
     padding: 8px 20px;
     border-radius: 20px;
-    font-size: 13px;
+    font-size: 25px;
     font-weight: 600;
 }
